--- a/index.html
+++ b/index.html
@@ -1,11 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        *{
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        table,
+        th,
+        td {
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+
+        th,
+        td {
+            padding: 15px 20px;
+        }
+        body{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background: #7fadfc;
+        }
+    </style>
 </head>
+
 <body>
-    hello world
+    <table>
+        <tr>
+            <th colspan="6">Time Table</th>
+        </tr>
+
+        <tr>
+            <th rowspan="6">Hours</th>
+            <th>Mon</th>
+            <th>Tue</th>
+            <th>Wed</th>
+            <th>Thu</th>
+            <th>Fri</th>
+        </tr>
+
+        <tr>
+            <td>Science</td>
+            <td>Maths</td>
+            <td>Science</td>
+            <td>Maths</td>
+            <td>Arts</td>
+        </tr>
+
+        <tr>
+            <td>Science</td>
+            <td>Maths</td>
+            <td>Science</td>
+            <td>Maths</td>
+            <td>Arts</td>
+        </tr>
+
+        <tr>
+            <th colspan="6">LUNCH</th>
+        </tr>
+
+        <tr>
+            <td>Science</td>
+            <td>Maths</td>
+            <td>Science</td>
+            <td>Maths</td>
+            <td rowspan="2">Project</td>
+        </tr>
+
+        <tr>
+            <td>Science</td>
+            <td>Maths</td>
+            <td>Science</td>
+            <td>Maths</td>
+        </tr>
+    </table>
+
+
+
+
+
+
+
+
+    <!-- <table>
+      <tr>
+        <th colspan="12">Time Table</th>
+      </tr>
+
+      <tr>
+        <td class="Hours" rowspan="6">Hours</td>
+        <th>Mon</th>
+        <th>Tue</th>
+        <th>Wed</th>
+        <th>Thu</th>
+        <th>Fri</th>
+      </tr>
+
+      <tr>
+        <td>alibaba</td>
+        <td>nadia</td>
+        <td>iran</td>
+        <td>iran</td>
+        <td>iran</td>
+      </tr>
+      <tr>
+        <td>alibaba</td>
+        <td>nadia</td>
+        <td>iran</td>
+        <td>iran</td>
+        <td>iran</td>
+      </tr>
+      <tr>
+        <th colspan="11">LUNCH</th>
+      </tr>
+      <tr>
+        <td>alibaba</td>
+        <td>nadia</td>
+        <td>iran</td>
+        <td>iran</td>
+        <td rowspan="2">Project</td>
+      </tr>
+      <tr>
+        <td>alibaba</td>
+        <td>nadia</td>
+        <td>iran</td>
+        <td>iran</td>
+      </tr>
+    </table> -->
 </body>
+
 </html>
